# cellxion-linux

./: CMakeLists.txt  Makefile  README.md  lv_conf.h  lv_drv_conf.h  main.c  simulator.code-workspace
images/: CMakeLists.txt  img_account.c  img_arm_electric_load.c  img_arm_size.c  img_bed_size.c  img_cooling_blue.c  img_cooling_gray.c  img_login.c  img_login_main.c  img_login_main_b.c  img_medicoson.c  img_needle.c  img_needle_b.c  img_needle_b2.c  img_needle_br.c  img_needle_g.c  img_needle_o.c  img_needle_r.c  img_needle_t.c  img_needle_y.c  img_noshow.c  img_passwd.c  img_power.c  img_question.c  img_setting.c  img_show.c  img_system.c  img_trash.c  patient_s.c
lv_drivers/display/: monitor.c
lv_drivers/indev/: keyboard.h  mouse.h  mousewheel.h
lv_libs/: CMakeLists.txt  cellxion.c  cellxion.h  lv_audio.c  lv_audio.h  lv_freetype.c  lv_freetype.h  lv_png.c  lv_rlottie.c  lv_rlottie.h
lvgl/: CMakeLists.txt
src/: CMakeLists.txt  gui.c  gui.h
